--- a/public/css/game.css
+++ b/public/css/game.css
@@ -54,14 +54,14 @@ body, html {
     }
     .header-main-image{
         max-height: 250px;
-        max-width: 250px;
-        width: 100%;
+        /* max-width: 250px; */
+        /* width: 100%; */
         height: 100%;
         display: block;
         margin-left: auto;
-          margin-right: auto;
-
+        margin-right: auto;
     }
+
     .store-text{
        color: whitesmoke;
        font-size: 1.3em;
